--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
-    "native-base": "^3.4.28",
+    "native-base": "3.3",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "3.3.2",
