--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-file-system": "^15.6.0",
     "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
     "native-base": "3.3",
