--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.6.0",
     "native-base": "3.3",
     "react": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
